thêm ChangePassword và ForgotPassword trên models và controllers

--- a/ServerWebAPI/appsettings.json
+++ b/ServerWebAPI/appsettings.json
@@ -2,11 +2,19 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DoAn;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+
+  "OtpSettings": {
+    "DefaultOtp": "123456"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
+
+  // thiếu JWT settings (cần dùng cho authentication)
 }
