--- a/ServerWebAPI/appsettings.json
+++ b/ServerWebAPI/appsettings.json
@@ -3,6 +3,13 @@
     "DefaultConnection": "Server=localhost;Database=DoAn;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
+  "Jwt": {
+    "Key": "day_la_secret_key_it_nhat_32_ky_tu_123456",
+    "Issuer": "DoAnAPI",
+    "Audience": "DoAnClient",
+    "ExpiresInMinutes": 60
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
