Fix các lỗi liên quan tới database đồng thời chỉnh lại cho đồng bộ thuộc về 1 API duy nhất

--- a/ServerWebAPI/appsettings.json
+++ b/ServerWebAPI/appsettings.json
@@ -1,21 +1,25 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=DoAn;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=OrderPathDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-
   "Jwt": {
     "Key": "day_la_secret_key_it_nhat_32_ky_tu_123456",
     "Issuer": "DoAnAPI",
     "Audience": "DoAnClient",
     "ExpiresInMinutes": 60
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5275"
+      }
+    }
+  }
 }
