--- a/ServerWebAPI/appsettings.json
+++ b/ServerWebAPI/appsettings.json
@@ -21,5 +21,9 @@
         "Url": "http://localhost:5000"
       }
     }
+  },
+  "Gmail": {
+    "Email": "idntvinh.cv206@gmail.com",
+    "AppPassword": "jjbhilhbxndlmwge"
   }
 }
